@@ -1,4 +1,7 @@
 
+2009-03-22 19:02 Ali aliov@xfce.org 
+	 * : React correctly when panel orientation changed
+
 2009-03-22 18:42 Ali aliov@xfce.org 
 	 * : Brightness and inhibit plugins are ready for user/test+fix a bug in the inhibit interface
 
